#45 Add context (#46)
* Fix REST API mapping

* Add context to extension interface

* Create schema if it does not exist

* Allow specifying server address

* Add version number to install function

* Implement review finding by @ckunki

Unify swagger documentation
